--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p>Second Number: </p>
         <input type="number" id="second" placeholder="Second Number"><br /><br />
         <button onclick="calc()">Calculate</button>
-        <script src="js/main.js">
+        <script src="main.js">
         </script>
     </body>
 </html>
